--- a/_includes/paper_abstract.html
+++ b/_includes/paper_abstract.html
@@ -8,7 +8,7 @@
     {% endfor %};
   </div>
 <div id="info" class="authors">
-    {{ page.container-title }}, PAPER {{ page.volume }}{% if page.number %}({{page.number}}){%endif%}:{{ page.page }}, {{ page.issued.date-parts.first }}.
+    {{ page.container-title }}, {{ page.volume }}{% if page.number %}({{page.number}}){%endif%}:{{ page.page }}, {{ page.issued.date-parts.first }}.
   </div> <!-- info -->
   
   <h4>Abstract</h4>
